
		Added:
			acme_account_key.spki_sha256
			certificate_ca.spki_sha256
			certificate_request.spki_sha256
			certificate_signed.spki_sha256
			private_key.spki_sha256

		Renamed
			`ca_certificate` to `certificate_ca`
			`CertificateCA` to `CertificateCA`
			`server_certificate` to `certificate_signed`
			`ServerCertificate` to `CertificateSigned`
			`id_cross_signed_of` to `id_cross_signed_by`
			"letsencrypt-download" to "letsencrypt-sync"
		
		Renamed
			CertificateSignedAlternateChain -> CertificateSignedChain 
			certificate_upchain_alternates -> certificate_signed_chains

		Removed
			CertificateSigned.certificate_ca_id__upchain
			CertificateSigned.certificate_upchain

		Removed:
			`CertificateCA.is_authority_certificate`
			`CertificateCA.is_ca_certificate`	

    Bugfixes:
	* Fixed legacy links to `/acme/orders` with the updated ``/acme/orders/all`
	* There were several undocumented differences between the Pebble and Boulder servers.
		This library was developed against the Pebble ACME test server from LetsEncrypt.
		Boulder is the ACME production server from LetsEncrypt.

    Improvements:
    * /admin/acme-challenge/{ID}/acme-server/trigger now requires a TOKEN to be
      submitted if the server can not answer the challenge
	  This will never be needed for http-01;
	  it is only needed for:
		  * dns-01 for a domain without an acme-dns account
		  * tls-alpn-01
	* Removed "Trigger" action from Authorization
	  A Challenge should be triggered, as an order may want a specific challenge type
	  Removals:
		  lib.db.actions_acme.do__AcmeV2_AcmeAuthorization__acme_server_trigger
		  web.views_admin.acme_authorization.acme_server_trigger
		  route_name="admin:acme_authorization:focus:acme_server:trigger"
		  route_name="admin:acme_authorization:focus:acme_server:trigger|json"
		  "/acme-authorization/{@id}/acme-server/trigger"
		  "/acme-authorization/{@id}/acme-server/trigger.json"
	* Tracking the submission of AcmeOrders in `AcmeOrderSubmission`