@@ -133,36 +133,6 @@ class ViewAdminOperations(Handler):
     # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
     @view_config(
-        route_name="admin:operations:certificate_ca_downloads",
-        renderer="/admin/operations-certificate_ca_downloads.mako",
-    )
-    @view_config(
-        route_name="admin:operations:certificate_ca_downloads_paginated",
-        renderer="/admin/operations-certificate_ca_downloads.mako",
-    )
-    def certificate_ca_downloads(self):
-        items_count = lib_db.get.get__OperationsEvent__certificate_download__count(
-            self.request.api_context
-        )
-        url_template = (
-            "%s/operations/certificate-ca-downloads/{0}"
-            % self.request.registry.settings["app_settings"]["admin_prefix"]
-        )
-        (pager, offset) = self._paginate(items_count, url_template=url_template)
-        items_paged = lib_db.get.get__OperationsEvent__certificate_download__paginated(
-            self.request.api_context, limit=items_per_page, offset=offset
-        )
-        return {
-            "project": "peter_sslers",
-            "OperationsEvents_count": items_count,
-            "OperationsEvents": items_paged,
-            "pager": pager,
-        }
-
-    # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-    @view_config(
         route_name="admin:operations:redis", renderer="/admin/operations-redis.mako"
     )
     @view_config(
